--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ authors = ["kkatka <kkatka@mail.ru>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 Django = "^5.1.1"
+psycopg2-binary = "^2.9.9"
+black = "^24.8.0"
+pillow = "^10.4.0"
 
 [tool.poetry.dev-dependencies]
 
