--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Django = "^5.1.1"
 psycopg2-binary = "^2.9.9"
 black = "^24.8.0"
 pillow = "^10.4.0"
+ipython = "^8.27.0"
 
 [tool.poetry.dev-dependencies]
 
