--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ psycopg2-binary = "^2.9.9"
 black = "^24.8.0"
 pillow = "^10.4.0"
 ipython = "^8.27.0"
+pytils = "^0.4.1"
 
 [tool.poetry.dev-dependencies]
 
